fix main alignment

--- a/newVersion/css/mainstyle.css
+++ b/newVersion/css/mainstyle.css
@@ -65,7 +65,6 @@
   margin-top:8%;
   margin-left:2%;
   margin-right:2%;
-  text-align: center;
   background-color: #ecf0f1;
   overflow: auto;
   padding:2%;
